2011-11-09  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c: Behavior of "alpha" option is reversed.
	  (255=transparency, 0=opacity => 255=opacity, 0=transparency)

	* vte.c: kik_sig_child_init() which internally calls signal(3) and which
	  confuses VteReaper is never called from vte.c.

2011-11-05  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c: Minor fixes.

	* ml_term.c: Check if term->pty is NULL or not in ml_term_zombie().

	* im_ibus.c:
	  - ibus_proxy_destroy() is used instead of ibus_object_destroy in ibus-1.4.
	  - g_main_context_iteration() is called in key_event().

2011-11-02  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The order of x_im_new and x_im_delete is reversed in
	  x_screen_attach() to avoid to delete all resources inside im-module.

	* x_imagelib.c: x_imagelib_get_transparent() supports root pixmap
	  whose depth is different from that of my window.

2011-10-31  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: GDBusConnection ibus-1.4.0 depends on is partially supported.
	  (Experimental)

	* vte.c: x_color_manager_change_alpha( ... , 0xff) if wall picture is set
	  in update_wall_picture().

	* x_imagelib.c: 0xff000000 is added to pixel value passed to XPutPixel()
	  in 32 bit depth in pixbuf_to_ximage_truecolor().

2011-10-29  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.c: copy_or_check_region() and reverse_or_restore_region() are
	  rewritten becase chars argument in copy_or_check_region() could be
	  overflown occasionally.

	* x_gc.c: Initial foreground/background colors of GC always equal to
	  those of x_gc_t in x_gc_new().
	
	* vte.c:
	  - Fixed mistakes of macros for vte-2.18 or before.
	  - x_window_update() is called appropriately.
	  - x_color_manager_change_alpha() and x_window_set_bg_color() are called
	    in vte_terminal_realize().

	* vtetypebuiltins.c: vte_pty_flags_get_type() and vte_pty_error_get_type()
	  are added.

	* x_color.c: Alpha blended pixel is set in 32 bit depth in x_load_rgb_xcolor().
